View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031759 | Open CASCADE | OCCT:Application Framework | public | 2020-09-10 17:24 | 2020-12-02 17:13 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.5.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031759: Application Framework - regression: support of old versions of OCAF document fails | ||||
Description | A regression - setting a previous version number for an OCAF document has no effect. See a script below to reproduce the problem. If you run the script, you should obtain an XML file (TestOldStorageVersion.xml). Open it in a text-editor and find a TPrsStd_AISPresentation attribute... there is no one. Although it should exist because in 2014 (storage version 7 points to this year) such an attribute was stored in XML file. Later it was replaced by TDataXtd_Presentation. Exactly this attribute we may see in the XML file. It means that setting a previous version for storage of OCAF documents doesn't work. | ||||
Steps To Reproduce | NewDocument D XmlOcaf set aLabel 0:1 box b 100 200 300 SetShape D ${aLabel} b AISInitViewer D AISSet D ${aLabel} NS AISDisplay D ${aLabel} #Let's return to 2014 SetStorageVersion D 7 set aFile TestOldStorageVersion.xml catch {file delete ${aFile}} SaveAs D ${aFile} | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR31759 has been created by vro. SHA-1: 19aa85b69b950bad7eb77aae304359c1d33b626e Detailed log of new commits: Author: romashko, vladislav Date: Thu Sep 10 17:36:37 2020 +0300 0031759: Application Framework - regression: support of old versions of OCAF document fails The bug is fixed in XmlMDF.cxx. Now the draw-command SetStorageVersion has effect and allows storage of OCAF documents in old storage versions. |
|
Branch CR31759_1 has been created by vro. SHA-1: 52dcc1d95cb95613014184939bec48eee2e6753e Detailed log of new commits: Author: Vlad Romashko Date: Mon Sep 14 10:51:33 2020 +0300 0031759: Application Framework - regression: support of old versions of OCAF document fails // Jenkins was failing because of regressions in topological operations. I had to create a new branch and run Jenkins again. |
|
Branch CR31759_2 has been created by vro. SHA-1: 3b35d7936af56309ed2f0a5bd95ae7d26b875eef Detailed log of new commits: Author: Vlad Romashko Date: Tue Sep 15 11:36:11 2020 +0300 0031759: Application Framework - regression: support of old versions of OCAF document fails // Another attempt to compile and test the fix in Jenkins. |
|
Dear Mikhail, could you please revise the fix? Tests: http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR31759_2-master-VRO/view/COMPARE/ |
|
Reviewed OCCT branch: CR31759_2 Products branch: NOTHING |
|
Combination - OCCT branch : IR-2020-09-18 master SHA - b0b766826118f74b9857a932b8cec8c52a25c492 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-18 SHA - a6486d839da1ba1383ef6cc1a1a446a172f494c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17528.97000000011 / 17378.390000000145 [+0.87%] Products Total CPU difference: 12127.32000000009 / 12079.540000000095 [+0.40%] Windows-64-VC14: OCCT Total CPU difference: 18862.703125 / 18898.921875 [-0.19%] Products Total CPU difference: 13314.828125 / 13329.21875 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31759_2 has been deleted by inv. SHA-1: 3b35d7936af56309ed2f0a5bd95ae7d26b875eef |
|
Branch CR31759_1 has been deleted by inv. SHA-1: 52dcc1d95cb95613014184939bec48eee2e6753e |
|
Branch CR31759 has been deleted by inv. SHA-1: 19aa85b69b950bad7eb77aae304359c1d33b626e |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-09-10 17:24 | vro | New Issue | |
2020-09-10 17:24 | vro | Assigned To | => vro |
2020-09-10 17:34 | git | Note Added: 0094395 | |
2020-09-11 15:32 | utverdov | Target Version | 7.5.0 => 7.6.0 |
2020-09-12 21:27 | abv | Target Version | 7.6.0 => 7.5.0 |
2020-09-14 10:48 | git | Note Added: 0094698 | |
2020-09-15 11:33 | git | Note Added: 0094813 | |
2020-09-16 06:01 | vro | Note Added: 0094894 | |
2020-09-16 06:01 | vro | Assigned To | vro => mpv |
2020-09-16 06:01 | vro | Status | new => resolved |
2020-09-16 08:40 | mpv | Note Added: 0094897 | |
2020-09-16 08:40 | mpv | Assigned To | mpv => bugmaster |
2020-09-16 08:40 | mpv | Status | resolved => reviewed |
2020-09-19 15:47 | bugmaster | Test case number | => Not required |
2020-09-19 17:22 | bugmaster | Note Added: 0095079 | |
2020-09-19 17:22 | bugmaster | Status | reviewed => tested |
2020-09-20 10:55 | bugmaster | Changeset attached | => occt master 8fde921f |
2020-09-20 10:55 | bugmaster | Status | tested => verified |
2020-09-20 10:55 | bugmaster | Resolution | open => fixed |
2020-09-20 11:14 | git | Note Added: 0095124 | |
2020-09-20 11:14 | git | Note Added: 0095131 | |
2020-09-20 11:14 | git | Note Added: 0095135 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |