0031759: Application Framework - regression: support of old versions of OCAF document fails